--- a/wp-content/themes/flieber/src/styles/pages/home.scss
+++ b/wp-content/themes/flieber/src/styles/pages/home.scss
@@ -9,7 +9,7 @@
     flex-direction: column;
     position: absolute;
     right: 2%;
-    top: 12%;
+    top: 7%;
     z-index: 9999;
     @include phone {
       display: none;
@@ -953,6 +953,20 @@
     }
 
     .blog {
+      &__content {
+        padding: 30px 0;
+
+        &.active {
+          display: grid;
+          grid-template-columns: 1fr 1fr 1fr;
+          grid-gap: 1.7rem;
+        }
+      }
+
+      &__post {
+        padding: 0;
+      }
+
       &__top {
         h2 {
           width: 30%;
