--- a/wp-content/themes/flieber/src/styles/pages/resources.scss
+++ b/wp-content/themes/flieber/src/styles/pages/resources.scss
@@ -249,6 +249,50 @@
           display: block;
         }
       }
+
+      &__pagination {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+
+        .pagination {
+          &__arrow {
+            background-color: $secondary-color;
+            border-radius: 50%;
+            color: #fff;
+            font-size: 1.5rem;
+            line-height: 30px;
+            text-align: center;
+            height: 30px;
+            width: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            svg {
+              width: 15px;
+              height: 15px;
+              fill: #fff;
+            }
+
+            &.prev {
+              margin-right: 30px;
+              transform: rotate(180deg);
+            }
+
+            &.next {
+              margin-left: 30px;
+            }
+          }
+
+          &__item {
+            color: $primary-color;
+            font-size: 1.5rem;
+            margin: 0 10px;
+          }
+        }
+      }
     }
   }
 }
