--- a/wp-content/themes/flieber/src/styles/pages/pricing.scss
+++ b/wp-content/themes/flieber/src/styles/pages/pricing.scss
@@ -142,6 +142,10 @@
       background: transparent url("./images/features/moldura_macbook.png")
         bottom center no-repeat;
       background-size: 100% 100%;
+
+      @include phone {
+        margin-bottom: 35px;
+      }
     }
 
     .slider-for {
